simple expand/collapse of notes; make gulp not stop after first error

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -76,7 +76,7 @@ $col-btn-hover-border: #1862b5;
 }
 
 .collapse:after {
-  border-bottom: 4px solid #09f;
+  border-bottom: 4px solid $col-blue;
   border-left: 3px solid transparent;
   border-right: 3px solid transparent;
   border-top: 0;
